kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rmq-test-consumer
spec:
  ports:
    - name: http-app
      port: 80
      targetPort: 3000
